--- a/backend-event-management/package.json
+++ b/backend-event-management/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
