--- a/backend-event-management/package.json
+++ b/backend-event-management/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "postinstall": "npm install"
     "test": "jest"
   },
   "dependencies": {
